--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,8 +1,7 @@
 name: Metrics
 on:
-  # Agenda para rodar todos os dias à meia-noite
+  # Roda todos os dias à meia-noite (Horário de Lisboa)
   schedule: [{cron: "0 0 * * *"}]
-  # Permite correr manualmente clicando num botão (para testar agora)
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
@@ -13,25 +12,28 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }} # Lembre-se de criar este Secret nas settings!
 
-          # --- Configuração Básica ---
+          # Seus dados
           user: martimgil
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Lisbon
           
-          # --- O Segredo para ler os outros repositórios ---
-          # Coloque aqui o(s) email(s) que usa nos seus commits.
-          # Isto permite ao Metrics saber que o código em outros repos é seu.
+          # --- O SEGREDO PARA LER ORGS/PRIVADOS ---
+          # Coloque o seu email pessoal aqui (o mesmo do git config)
           commits_authoring: a.martimgil@gmail.com
-
-          # --- Configuração Avançada de Linguagens ---
+          
+          # Configuração de Linguagens (incluindo privados)
           plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css
+          plugin_languages_ignored: html, css
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
           plugin_languages_details: bytes-size, percentage
-          # Esta linha abaixo é crucial para analisar repos privados
-          committer_token: ${{ secrets.METRICS_TOKEN }}
+          
+          # Mostra linhas de código adicionadas/removidas
+          plugin_lines: yes
+          
+          # Mostra o seu "Streak" (dias seguidos a programar)
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
