--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,39 +1,23 @@
-name: Metrics
-on:
-  # Roda todos os dias à meia-noite (Horário de Lisboa)
-  schedule: [{cron: "0 0 * * *"}]
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
-jobs:
-  github-metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
+steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }} # Lembre-se de criar este Secret nas settings!
-
-          # Seus dados
+          token: ${{ secrets.METRICS_TOKEN }}
+          
           user: martimgil
           template: classic
-          base: header, activity, community, repositories, metadata
           config_timezone: Europe/Lisbon
           
-          # --- O SEGREDO PARA LER ORGS/PRIVADOS ---
-          # Coloque o seu email pessoal aqui (o mesmo do git config)
-          commits_authoring: a.martimgil@gmail.com
+   
+          commits_authoring: martimgil@ua.pt, a.martimgil@gmail.com
           
-          # Configuração de Linguagens (incluindo privados)
+          base: ""
+          
           plugin_languages: yes
-          plugin_languages_ignored: html, css
+          
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_details: percentage
           
-          # Mostra linhas de código adicionadas/removidas
-          plugin_lines: yes
-          
-          # Mostra o seu "Streak" (dias seguidos a programar)
+          # --- GRÁFICO 3D ---
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
