--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,19 +1,27 @@
-steps:
+name: Metrics
+on:
+  schedule: [{cron: "0 0 * * *"}]
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
+jobs:
+  github-metrics:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          
+
           user: martimgil
           template: classic
           config_timezone: Europe/Lisbon
           
-   
           commits_authoring: martimgil@ua.pt, a.martimgil@gmail.com
           
           base: ""
           
           plugin_languages: yes
-          
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
           plugin_languages_details: percentage
