--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,45 +12,33 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Configurações de Autenticação
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }} # Usa o token padrão para o commit
-
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          
           # Configurações Gerais
           user: martimgil
           template: classic
-          base: header, activity, community, repositories
+          filename: github-metrics.svg
           config_timezone: Europe/Lisbon
-          filename: github-metrics.svg # Define o nome do ficheiro explicitamente
-
-          # Commits
-          commits_authoring: martimgil@ua.pt, a.martimgil@gmail.com
           
-          # --- LINGUAGENS ---
+          # --- ESTATÍSTICAS BÁSICAS (Topo) ---
+          # Mostra: Stars, Seguidores, Forks e Repositórios
+          base: header, community, repositories
+          
+          # --- LINGUAGENS (O Mais Usado) ---
           plugin_languages: yes
-          plugin_languages_limit: 12
+          plugin_languages_limit: 8           # Apenas as 8 principais
           plugin_languages_sections: most-used
           plugin_languages_details: percentage
+          plugin_languages_ignored: html, css # Ignora linguagens de marcação se preferires
           
-          # --- GRÁFICO 3D ---
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-
-          # --- PREVENÇÃO DE ERROS ---
-          retries: 3
-          retries_delay: 300
-
-          # --- HÁBITOS ---
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_habits_charts: no 
-          plugin_habits_days: 14
-          plugin_habits_from: 200
-          
-          # --- LINHAS DE CÓDIGO ---
+          # --- TOTAL DE LINHAS DE CÓDIGO ---
           plugin_lines: yes
-
-          # --- CONQUISTAS ---
+          
+          # --- CONQUISTAS (Opcional, mas ocupa pouco espaço) ---
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_ignored: manager
+          
+          # Prevenção de timeouts
+          retries: 3
+          retries_delay: 300
